[gd_scene load_steps=28 format=2]

[ext_resource path="res://Textures/babkahandanim.png" type="Texture" id=1]
[ext_resource path="res://Scripts/MC.gd" type="Script" id=2]
[ext_resource path="res://Scripts/Weapon.gd" type="Script" id=3]
[ext_resource path="res://Scenes/Projectiles/Projectile.tscn" type="PackedScene" id=4]
[ext_resource path="res://Textures/babkaanim.png" type="Texture" id=5]
[ext_resource path="res://Textures/glaza.png" type="Texture" id=6]

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 5 )
region = Rect2( 0, 0, 24, 30 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 5 )
region = Rect2( 25, 0, 24, 30 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 5 )
region = Rect2( 50, 0, 24, 30 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 5 )
region = Rect2( 75, 0, 24, 30 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 5 )
region = Rect2( 100, 0, 24, 30 )

[sub_resource type="SpriteFrames" id=12]
animations = [ {
"frames": [ SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ) ],
"loop": true,
"name": "walk",
"speed": 10.0
} ]

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 1 )
region = Rect2( 64, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 1 )
region = Rect2( 128, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 1 )
region = Rect2( 192, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 1 )
region = Rect2( 256, 0, 64, 64 )

[sub_resource type="SpriteFrames" id=18]
animations = [ {
"frames": [ SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 16 ), SubResource( 17 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 19.5, 45 )

[sub_resource type="Animation" id=3]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Weapon:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}

[sub_resource type="Animation" id=2]
resource_name = "shooting"
length = 0.9
tracks/0/type = "method"
tracks/0/path = NodePath("Weapon")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.3 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "shoot"
} ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("WeaponSprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 1, 0 ]
}

[sub_resource type="Animation" id=20]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("../WeaponSprite:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}

[sub_resource type="Animation" id=21]
resource_name = "reloading"
length = 2.0
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("../WeaponSprite:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 360.0 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.25, 0.5, 0.75, 1, 1.25, 1.5, 1.75, 2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"values": [ {
"args": [  ],
"method": "reloadOctave"
}, {
"args": [  ],
"method": "reloadOctave"
}, {
"args": [  ],
"method": "reloadOctave"
}, {
"args": [  ],
"method": "reloadOctave"
}, {
"args": [  ],
"method": "reloadOctave"
}, {
"args": [  ],
"method": "reloadOctave"
}, {
"args": [  ],
"method": "reloadOctave"
}, {
"args": [  ],
"method": "reloadOctave"
} ]
}

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 11.5, 24 )

[sub_resource type="Animation" id=5]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=6]
resource_name = "iframes"
length = 0.3
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.15, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Gradient" id=19]
colors = PoolColorArray( 1, 1, 1, 0.662745, 1, 1, 1, 0 )

[node name="MC" type="KinematicBody2D"]
collision_layer = 0
script = ExtResource( 2 )
maxHealthPoints = 80.0
invulnerabilityTime = 1.0
speed = 100.0

[node name="Sprite" type="AnimatedSprite" parent="."]
scale = Vector2( 3, 3 )
frames = SubResource( 12 )
animation = "walk"
frame = 1
playing = true

[node name="Eyes" type="Sprite" parent="."]
position = Vector2( 0, -1.5 )
scale = Vector2( 3, 3 )
texture = ExtResource( 6 )

[node name="WeaponSprite" type="AnimatedSprite" parent="."]
scale = Vector2( 3, 3 )
frames = SubResource( 18 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
modulate = Color( 1, 1, 1, 0.552941 )
position = Vector2( -1.5, 0 )
shape = SubResource( 1 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true
zoom = Vector2( 0.9, 0.9 )
smoothing_enabled = true

[node name="Weapon" type="Node2D" parent="."]
script = ExtResource( 3 )
projectile = ExtResource( 4 )
damage = 34.0
critDamgeMultiplier = 1.5
critChance = 10
maxAmmo = 4

[node name="ProjSpawnPos" type="Position2D" parent="Weapon"]
position = Vector2( 22, 0 )

[node name="ShootAnim" type="AnimationPlayer" parent="Weapon"]
root_node = NodePath("../..")
anims/RESET = SubResource( 3 )
anims/shooting = SubResource( 2 )

[node name="ReloadAnim" type="AnimationPlayer" parent="Weapon"]
anims/RESET = SubResource( 20 )
anims/reloading = SubResource( 21 )

[node name="Hurtbox" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]
modulate = Color( 1, 0.52549, 0.0196078, 1 )
position = Vector2( 0, 1 )
shape = SubResource( 4 )

[node name="IFrameAnim" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 5 )
anims/iframes = SubResource( 6 )

[node name="IFrameTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="EyesReference" type="Position2D" parent="."]
position = Vector2( -1.5, -27 )
__meta__ = {
"_gizmo_extents_": 9.0
}

[node name="SoupParticles" type="CPUParticles2D" parent="."]
position = Vector2( -4.5, -1 )
amount = 16
lifetime = 0.7
local_coords = false
emission_shape = 2
emission_rect_extents = Vector2( 10, 1 )
direction = Vector2( 0, -1 )
spread = 0.0
gravity = Vector2( 0, 1 )
initial_velocity = 40.0
initial_velocity_random = 0.2
radial_accel = 26.09
radial_accel_random = 1.0
angle = 62.6
angle_random = 1.0
scale_amount = 2.0
scale_amount_random = 1.0
color = Color( 0.541176, 0.541176, 0.541176, 1 )
color_ramp = SubResource( 19 )
